2011-10-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/uart.c: Remove unused var "tmp".

2011-08-04	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/irq_asm.S: BUGFIX (introduced by SMP changes
	which moved code around, apparently): *must* store i8259
	mask to frame *before* switching to IRQ stack. The code
	retrieves the mask after switching back to original stack.
	Also, the IRQ stack has no reserved space for the mask;
	storing it there could overwrite memory!

2011-08-01	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	PR 1802
	* shared/irq/irq_asm.S, shared/irq/irq_init.c, shared/smp/smp-imps.c,
	shared/smp/smp-imps.h: Add SMP support for i386.
	* shared/smp/getcpuid.c: New file.

2011-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/apic.h, shared/smp/smp-imps.c, shared/smp/smp-imps.h:
	Reformat to be more compliant with RTEMS style.

2011-07-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/apic.h, shared/smp/smp-imps.c, shared/smp/smp-imps.h: Per
	email with Erich Boleyn, change license to BSD style.

2011-07-14	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* shared/irq/irq.c, shared/irq/irq.h, shared/irq/irq_init.c: Add
	initial support for APIC.

2011-07-14	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* shared/irq/apic.h, shared/smp/README, shared/smp/smp-imps.c,
	shared/smp/smp-imps.h: New files.

2011-05-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/tty_drv.c, shared/comm/tty_drv.h:
	Remove CVS-Headers. Add CVS-Ids.

2011-04-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/irq_asm.S: Rename rtems_smp_maximum_processors to
	rtems_configuration_smp_maximum_processors since it is defined in
	confdefs.h.

2011-04-04	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1768/bsps
	* shared/irq/irq_asm.S: The nbench benchmark highlighted the fact that
	we do not perform a cld before calling C code in the ISR. This was
	historically not a problem but gcc 4.3 changed the behavior. From