@@ -1,3 +1,7 @@
+2011-10-22	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* shared/comm/uart.c (uartError): Remove unused var "uartStatus".
+
 2011-10-13	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* shared/comm/uart.c: Remove unused var "tmp".
